feat: rename invite code to friend code
